# dxgen

./: .gitignore  README.md  build.bat  build.fsx  dxgen.sln
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
dxgen/: CodeGenTree.fs  HeaderAST.fs  HeaderConverter.fs  HeaderParser.fs  Program.fs  dxgen.fsproj  libclang.fs
dxgen.test/: dxgen.test.fsproj
dxgen/PCH/: DXGI_PCH.h
src/: CaseConverter.fs  Configuration.fs  Program.fs  SDKLocator.fs  a_d2d1effectauthor.fs  annotations.fs  annotations_autogen.fs  annotations_d2d1.fs  annotations_d3d11.fs  annotations_objidl.fs  by_module.fs  cdesc.fs  config.yaml  custom_impls.fs  defines_annotations.fs  dxgen.fsproj  libclang.fs  packages.config  parse.fs  parserm.fs  rustdesc.fs  safegen.fs  salParser.fs  sysgen.fs  utils.fs
src/PCH/: dwrite_pch.h  dxva2api_pch.h
src/dxgen/: CaseConverter.fs  CodeGenTree.fs  Configuration.fs  ConfigurationLoader.fs  HeaderConverter.fs  HeaderInfo.fs  HeaderLoader.fs  ModuleBuilder.fs  OnlyParse.fs  ParseAndGen.fs  Program.fs  SDKLocator.fs  annotations.fs  annotations_DocumentTarget.fs  annotations_autogen.fs  annotations_d2d1.fs  annotations_d3d11.fs  annotations_d3d11on12.fs  annotations_dwrite.fs  annotations_objidl.fs  annotations_objidlbase.fs  annotations_ocidl.fs  annotations_urlmon.fs  annotations_wincodec.fs  by_module.fs  cdesc.fs  config.yaml  custom_impls.fs  dxgen.fsproj  libclang.fs  packages.config  parse.fs  parserm.fs  rustdesc.fs  safegen.fs  salParser.fs  sysgen.fs  utils.fs
src/dxgen.test/: CaseConverterTests.fs  ConfigurationTests.fs  HeaderConverterTests.fs  SDKLocatorTests.fs  TypeInfoBuilderTests.fs  dxgen.test.fsproj
src/dxgen.test/Data/: IUnknown.h  enums.h  struct.h  struct_arrays.h
src/dxgen/Model/: TypeInfo.fs  TypeInfoBuilder.fs
src/dxgen/PCH/: Common_PCH.h  DXGI_PCH.h
src/dxgen/scaffolding/: Cargo.toml  build.rs  create_device.rs  d3d12.rs  d3d12_sys.rs  iid.rs  macros.rs  main.rs
src/dxgen/scaffolding/lib/d3d12/: Cargo.toml
src/dxgen/scaffolding/lib/d3d12/src/: DocumentTarget_safe.rs  d2d1_1_safe.rs  d2d1_2_safe.rs  d2d1_3_safe.rs  d2d1_safe.rs  d3d11_safe.rs  d3d11on12_safe.rs  d3d12.rs  d3d12_safe.rs  d3d12sdklayers_safe.rs  d3d12shader_safe.rs  d3dcommon_safe.rs  dwrite_safe.rs  dxgi1_2_safe.rs  dxgi1_3_safe.rs  dxgi1_4_safe.rs  dxgi_safe.rs  helpers.rs  iid.rs  lib.rs  objidlbase_safe.rs  ocidl_safe.rs  structwrappers.rs  utils.rs  wincodec_safe.rs
src/dxgen/scaffolding/lib/d3d12_sys/: Cargo.toml
src/dxgen/scaffolding/lib/d3d12_sys/src/: d3d12_sys.rs  iid.rs  lib.rs
src/dxgen/scaffolding/src/: app.rs  camera.rs  collision.rs  core.rs  create_device.rs  cubes.rs  cubestate.rs  d2d1test.rs  distancefield.rs  downsampler.hlsl  downsampler.rs  drawtext.rs  dxsems.rs  hvoxel.rs  light.hlsl  light.rs  macros.rs  main.rs  plshadow.hlsl  plshadow.rs  reductor.hlsl  reductor.rs  seh.rs  shaders.hlsl  shadow_constants.hlsl  shape_gen.rs  skybox.hdr  skybox.hlsl  skybox.rs  sound.rs  structwrappers.rs  tilemapping.rs  tonemap.hlsl  tonemapper.rs  utils.rs  view_constants.hlsl  window.rs
src/dxgen/scaffolding/src/shaders/: skybox.hlsl  view_constants.hlsl
src/scaffolding/: Cargo.toml  build.rs
src/scaffolding/src/: camera.rs  core.rs  create_device.rs  cubes.rs  cubestate.rs  drawtext.rs  dxsems.rs  error_conversion.rs  light.rs  macros.rs  main.rs  nosound.rs  plshadow.rs  shape_gen.rs  skybox.rs  sound.rs  tonemapper.rs  utils.rs  wmtext.rs  ws.rs
src/scaffolding/src/shaders/: d2d1test.hlsl  light.hlsl  plshadow.hlsl  shaders.hlsl  shadow_constants.hlsl  skybox.hlsl  tonemap.hlsl
