[package]
name = "d3d12_integration_test"
version = "0.3.0"
authors = ["red75prime <red75prim@gmail.com>"]
build = "build.rs"

[features]
default = []
openal = ["openal-rs"]

[dependencies]
libc = "0.2"
lazy_static = "0.1"
log = "0.3"
env_logger = "0.3"
dx_safe = { version = "0.3", path = "lib/d3d12" }
# gfx = { git = "https://github.com/gfx-rs/gfx/tree/master/src/core" }
rand = "0.3"
cgmath = "0.9"
time = "0.1"
crossbeam = "0.1"
obj = "0.4"
itertools = "0.4.6"
winapi = "0.2"
dxgi-sys = "0.2"
user32-sys = "0.1"
kernel32-sys = "0.2"
dxguid-sys = "0.2"
d3dcompiler-sys = "0.2"
d3d12-sys = "0.2"
openal-rs = { version = "0.1", optional = true }

#[dependencies.winapi]
##version = "0.2.5"
#git = "https://github.com/retep998/winapi-rs/"
#branch = "master"

#[dependencies.dxgi-sys]
#git = "https://github.com/retep998/winapi-rs/"
#branch = "master"

#[dependencies.user32-sys]
#git = "https://github.com/retep998/winapi-rs/"
#branch = "master"

#[dependencies.kernel32-sys]
#git = "https://github.com/retep998/winapi-rs/"
#branch = "master"

#[dependencies.d3d12-sys]
#git = "https://github.com/red75prime/winapi-rs/"
#branch = "d3d12_sys_27"

#[dependencies.dxguid-sys]
#git = "https://github.com/retep998/winapi-rs/"
#branch = "master"
