[package]
name = "d3d12_integration_test"
version = "0.3.0"
authors = ["red75prime <red75prim@gmail.com>"]
build = "build.rs"

#[profile.release]
#debug = true

[features]
default = []
openal = ["openal-rs"]

[dependencies]
libc = "0.2"
lazy_static = "0.1"
log = "0.3"
env_logger = "0.3"
# gfx = { git = "https://github.com/gfx-rs/gfx/tree/master/src/core" }
rand = "0.3"
cgmath = "0.12"
time = "0.1"
crossbeam = "0.2"
obj = "0.4"
itertools = "0.4.6"
#winapi = "0.2"
#dxgi-sys = "0.2"
#user32-sys = "0.1"
#kernel32-sys = "0.2"
#dxguid-sys = "0.2"
#d3dcompiler-sys = "0.2"
#d3d12-sys = "0.2"
#d2d1-sys = "0.0"
#dwrite-sys = "0.2"
openal-rs = { version = "0.1", optional = true }
ncollide = "0.10"
nalgebra = "0.9"
getopts = "0.2"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image/"
default-features = false
features = ["hdr"]
branch = "master"

[dependencies.winapi]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.dxgi-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.user32-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.kernel32-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

#[dependencies.d3d12-sys]
#git = "https://github.com/red75prime/winapi-rs/"
#branch = "D2D1_IIDs"

[dependencies.dxguid-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.d3dcompiler-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.d2d1-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.dwrite-sys]
git = "https://github.com/red75prime/winapi-rs/"
branch = "D2D1_IIDs"

[dependencies.dxsafe]
git = "https://github.com/red75prime/rusty-com-port/"
branch = "master"
