[package]
name = "dx_safe"
version = "0.3.1"
authors = ["red75prime <red75prim@gmail.com>"]

[lib]
name = "dx_safe"

[dependencies]
libc = "*"

[dependencies.winapi]
git = "https://github.com/red75prime/winapi-rs"
branch = "dx12"

# [dependencies.d3d12_sys]
# git = "https://github.com/red75prime/winapi-rs"
# branch = "dx12"

[dependencies.winapi-build]
git = "https://github.com/red75prime/winapi-rs"
branch = "dx12"

[dependencies.dxguid-sys]
git = "https://github.com/red75prime/winapi-rs"
branch = "dx12"
