[package]
name = "dx_safe"
version = "0.3.1"
authors = ["red75prime <red75prim@gmail.com>"]

[lib]
name = "dx_safe"

[dependencies]
libc = "0.2"

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs/"
branch = "master"

[dependencies.winapi-build]
git = "https://github.com/retep998/winapi-rs/"
branch = "master"

[dependencies.dxguid-sys]
git = "https://github.com/retep998/winapi-rs/"
branch = "master"
